# hive

./: CONTRIBUTING.md  DEVELOPER.md  ENVIRONMENT_SETUP.md  Makefile  README.md  RELEASE_v0.4.0.md  quickstart.sh
.claude/skills/agent-workflow/: SKILL.md
.claude/skills/building-agents-construction/: SKILL.md
.claude/skills/building-agents-core/: SKILL.md
.claude/skills/building-agents-patterns/: SKILL.md
.claude/skills/setup-credentials/: SKILL.md
.github/workflows/: pr-requirements-enforce.yml  pr-requirements.yml
core/: README.md  pyproject.toml  setup_mcp.py  setup_mcp.sh  verify_mcp.py
core/examples/: manual_agent.py
core/framework/agents/hive_coder/nodes/: __init__.py
core/framework/agents/hive_coder/reference/: anti_patterns.md
core/framework/credentials/: storage.py
core/framework/credentials/oauth2/: base_provider.py
core/framework/credentials/vault/: hashicorp.py
core/framework/graph/event_loop/: types.py
core/framework/llm/: litellm.py
core/framework/mcp/: agent_builder_server.py
core/framework/testing/: __init__.py
core/frontend/src/lib/: chat-helpers.ts
core/tests/: test_event_loop_node.py  test_litellm_provider.py  test_litellm_streaming.py
docs/: aden-credential-sync.md  configuration.md  contributing-lint-setup.md  credential-store-design.md  environment-setup.md  getting-started.md
docs/i18n/: es.md  hi.md  ja.md  ko.md  pt.md  ru.md  zh-CN.md
examples/: README.md
examples/templates/: README.md
scripts/: test_check_requirements.py
tools/: README.md  coder_tools_server.py
tools/tests/: test_health_checks.py
(+29 files in other folders)
